Update requirements to include Sphinx

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,8 @@
 name = sphinx-graphql
 description = Sphinx utilities for documenting GraphQL APIs
 url = https://github.com/dls-controls/sphinx-graphql
-author = Callum Forrester
-author_email = callum.forrester@diamond.ac.uk
+author = Tom Cobb, Callum Forrester
+author_email = tom.cobb@diamond.ac.uk, callum.forrester@diamond.ac.uk
 license = Apache License 2.0
 long_description = file: README.rst
 long_description_content_type = text/x-rst
@@ -16,9 +16,8 @@ classifiers =
 
 [options]
 packages = find:
-# install_requires =
-#     numpy
-#     scipy
+install_requires =
+    sphinx
 
 # If you want to include data files in packages,
 # either define [options.package_data] or
