--- a/Pipfile
+++ b/Pipfile
@@ -6,19 +6,15 @@ verify_ssl = true
 [dev-packages]
 # Pinning black stops us having to allow pre-releases globally
 black = "==19.10b0"
-
 # Pins to make lockfile usable on multiple Python versions and platforms
 mypy = "*"
 atomicwrites = "*"
 typing-extensions = "*"
 importlib-metadata = "*"
-
 # Switch to main repo after PR https://github.com/Holzhaus/sphinx-multiversion/pull/64 is merged
 sphinx-multiversion = {editable = true,git = "https://github.com/dls-controls/sphinx-multiversion.git",ref = "only-arg"}
-
 # List wheel here to make sure we make the same version to make wheels on gitlab and github CI
 wheel = "0.33.1"
-
 # Test and docs dependencies
 pytest-cov = "*"
 pytest-mypy = "*"
@@ -27,6 +23,7 @@ pytest-black = "*"
 flake8-isort = "*"
 isort = ">5.0"
 sphinx-rtd-theme = "*"
+sphinx-testing = "*"
 
 [packages]
 # All other package requirements from setup.cfg
