--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,3 @@
-
 name: Docs CI
 
 on:
@@ -13,7 +12,7 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v2
         with:
-          # require all of history to see all tagged versions' docs
+          # require history to get back to last tag for version number of branches
           fetch-depth: 0
 
       - name: Set up Python
@@ -30,7 +29,22 @@ jobs:
           pip install pipenv
           pipenv install --dev --deploy --python $(which python) && pipenv graph
 
-      - name: Deploy index
+      - name: Build Docs
+        run: pipenv run docs
+
+      - uses: rishabhgupta/split-by@v1
+        id: split
+        with:
+          string: ${{ github.ref }}
+          split-by: /
+
+      - name: Move to versioned directory
+        # e.g. master or 0.1.2
+        run: mv build/html ".github/pages/${{ steps.split.outputs._2 }}"
+
+      - name: Publish Docs to gh-pages
+        # Only master and tags are published
+        if: "${{ github.repository_owner == 'dls-controls' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags')) }}"
         # We pin to the SHA, not the tag, for security reasons.
         # https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/security-hardening-for-github-actions#using-third-party-actions
         uses: peaceiris/actions-gh-pages@bbdfb200618d235585ad98e965f4aafc39b4c501  # v3.7.3
@@ -38,32 +52,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: .github/pages
           keep_files: true
-
-      - name: Checkout gh-pages
-        # As we already did a deploy of gh-pages above, it is guaranteed to be there
-        # so check it out so we can selectively build docs below
-        uses: actions/checkout@v2
-        with:
-          ref: gh-pages
-          path: build/html
-
-      - name: Maybe use sphinx-multiversion
-        # If we are building master or a tag we will publish
-        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags')
-        # So use the args we normally pass to sphinx-build, but run sphinx-multiversion
-        run: mv $(pipenv --venv)/bin/sphinx-multiversion $(pipenv --venv)/bin/sphinx-build
-
-      - name: Build Docs
-        run: pipenv run docs
-
-      - name: Publish Docs to gh-pages
-        # Only master and tags are published
-        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags')
-        # We pin to the SHA, not the tag, for security reasons.
-        # https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/security-hardening-for-github-actions#using-third-party-actions
-        uses: peaceiris/actions-gh-pages@bbdfb200618d235585ad98e965f4aafc39b4c501  # v3.7.3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build/html
-          keep_files: true
-
